Update README and manifest to reflect boilerplate purpose

--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-	"id": "obsidian-ematrix",
-	"name": "EMatrix",
+	"id": "obsidian-ematrix-boilerplate",
+	"name": "Obsidian Plugin Boilerplate with Tag Processing",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "A simple plugin for Obsidian.",
+	"description": "A boilerplate for creating Obsidian plugins with tag-based content processing functionality.",
 	"author": "Aaron Hogan",
-	"authorUrl": "",
+	"authorUrl": "https://github.com/aaron-hogan",
 	"isDesktopOnly": false
 }
